--- a/java-all-call-graph/pom.xml
+++ b/java-all-call-graph/pom.xml
@@ -23,6 +23,7 @@
         <commons.io.version>2.14.0</commons.io.version>
         <commons.compress.version>1.27.1</commons.compress.version>
         <commons.chain.version>1.2</commons.chain.version>
+        <httpclient5.version>5.4.2</httpclient5.version>
         <druid.version>1.2.15</druid.version>
         <mysql.version>8.4.0</mysql.version>
         <h2.version>2.2.220</h2.version>
@@ -70,6 +71,11 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-compress</artifactId>
             <version>${commons.compress.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents.client5</groupId>
+            <artifactId>httpclient5</artifactId>
+            <version>${httpclient5.version}</version>
         </dependency>
 
         <!-- Lombok -->
