code-mesh ttl 获取 workspace 和 project

--- a/java-all-call-graph/pom.xml
+++ b/java-all-call-graph/pom.xml
@@ -28,6 +28,7 @@
         <mysql.version>8.4.0</mysql.version>
         <h2.version>2.2.220</h2.version>
         <slf4j.version>1.7.36</slf4j.version>
+        <ttl.version>2.14.5</ttl.version>
         <mybatis.parser.version>0.1.0</mybatis.parser.version>
         <jackson.version>2.14.0</jackson.version>
         <jdom.version>2.0.6.1</jdom.version>
@@ -112,7 +113,14 @@
             <artifactId>slf4j-api</artifactId>
             <version>${slf4j.version}</version>
         </dependency>
-        
+
+        <!-- ttl -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>transmittable-thread-local</artifactId>
+            <version>${ttl.version}</version>
+        </dependency>
+
         <!-- Logback -->
         <dependency>
             <groupId>ch.qos.logback</groupId>
